--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title:             My wonderful website that I built myself
-email:             your-email@example.com
-description:       Insert clever description here
-author:            Your name
+title:             My practice website
+email:             erareshide@ucsb.edu
+description:       I'm learning how to make a website.
+author:            Ely Rareshide
 baseurl:           "" # Leave this alone if this is your main site (i.e. username.github.io). If instead this is a site for a project, e.g. username.github.io/
-url:               "http://username.github.io" # or http://username.github.io/mycleverproject if it is a project site, or http://mylovelydomainname.com if you have a domain, and so on.
+url:               "http://erareshide.github.io" # or http://username.github.io/mycleverproject if it is a project site, or http://mylovelydomainname.com if you have a domain, and so on.
 
 collections:
   pages:
