Commented out social media links

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ collections:
     permalink: /:name
 
 # Social Profiles
-twitter_username:  SBootstrap
-github_username:   BlackrockDigital
-facebook_username: StartBootstrap
+# twitter_username:  SBootstrap
+# github_username:   BlackrockDigital
+# facebook_username: StartBootstrap
 
 # Build settings
 markdown:          kramdown
