--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:             My practice website
+title:             Elisabeth (Ely) Rareshide
 email:             erareshide@ucsb.edu
-description:       I'm learning how to make a website.
+description:       This website is a currently under construction. Come back soon for updates.
 author:            Ely Rareshide
 baseurl:           "" # Leave this alone if this is your main site (i.e. username.github.io). If instead this is a site for a project, e.g. username.github.io/
 url:               "http://erareshide.github.io" # or http://username.github.io/mycleverproject if it is a project site, or http://mylovelydomainname.com if you have a domain, and so on.
